--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "liaise_derive"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 
 license = "MIT OR Apache-2.0"
@@ -18,3 +18,4 @@ proc-macro = true
 syn = { version = "2.0.114", features = ["full", "extra-traits"] }
 quote = "1.0.44"
 proc-macro2 = "1.0.106"
+proc-macro-crate = "3"
