--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "liaise_derive"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 
 license = "MIT OR Apache-2.0"
@@ -14,6 +14,9 @@ readme = "readme.md"
 [lib]
 proc-macro = true
 
+[features]
+default = []
+std = []
 [dependencies]
 syn = { version = "2.0.114", features = ["full", "extra-traits"] }
 quote = "1.0.44"
